# musabi-ml

./: README.md  pyproject.toml
musabi_ml/job/: crawler_job.py  train_job.py
musabi_ml/ml/: dcgan.py  gan.py  trainer.py
musabi_ml/util/: crawler_util.py  image_crawler.py  image_util.py
tests/: conftest.py  test_musabi_ml.py
tests/unit/ml/: test_dcgan.py  test_trainer.py
