[tool.poetry]
name = "musabi-ml"
version = "0.1.0"
description = ""
authors = ["adtak <adtak>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "~2.4.0"
Pillow = "^8.3.1"
seaborn = "^0.11.2"
icrawler = "^0.6.6"
beautifulsoup4 = "^4.10.0"
selenium = "^3.141.0"
selenium-wire = "^4.5.2"
opencv-python = "~4.4.0"
opencv-contrib-python = "~4.4.0"
lightweight-gan = "^0.20.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
mypy = "^0.812"
pytest = "^6.2.3"
ipykernel = "^6.0.1"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
